src/test/ui/span/issue-11925.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/issue-11925.rs:8:36
   |
LL |         let f = to_fn_once(move|| &x);
   |                                    ^
   |                                    |
   |                                    borrowed value does not live long enough
   |                                    `x` dropped here while still borrowed
...
LL | }
   | - borrowed value needs to live until here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
